--- a/microscope/client/views/includes/header.html
+++ b/microscope/client/views/includes/header.html
@@ -9,7 +9,7 @@
       <a class="brand" href="{{postsListPath}}">Microscope</a>
       <div class="nav-collapse collapse">
         <ul class="nav">
-          {{#if currentUser}}<li><a href="{{postSubmitPath}}">Submit Path</a></li>{{/if}}
+          {{#if currentUser}}<li><a href="{{postSubmitPath}}">Submit Post</a></li>{{/if}}
         </ul>
         <ul class="nav pull-right">
           <li>{{loginButtons}}</li>
